# image-optim

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bacon.toml  entrypoint.sh
.github/workflows/: build.yml
configs/: default.toml  production.toml
src/: config.rs  dal.rs  error.rs  image.rs  image_processing.rs  image_task.rs  images.rs  main.rs  optim.rs  response.rs  router.rs  state.rs
src/middleware/: mod.rs
src/task_local/: macros.rs  mod.rs
