[package]
name = "image-optim"
version = "0.3.2"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["multipart"] }
axum-client-ip = "0.6.0"
base64 = "0.22.1"
chrono = "0.4.38"
http = "1.1.0"
image = { version = "0.25.1", default-features = false }
imageoptimize = "0.1.4"
lru = "0.12.3"
mime = "0.3.17"
mime_guess = "2.0.4"
nanoid = "0.4.0"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
] }
rgb = "0.8.37"
serde = { version = "1.0.203", features = ["derive"] }
snafu = "0.8.3"
substring = "1.4.5"
time = "0.3.36"
tokio = { version = "1.38.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
] }
tower = { version = "0.4.13", features = ["timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
urlencoding = "2.1.3"

[profile.release]
lto = true
codegen-units = 1
