[package]
name = "image-optim"
version = "0.3.4"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["multipart"] }
axum-extra = { version = "0.10.3", features = ["cookie", "cookie-signed"] }
base64 = "0.22.1"
ctor = "0.6.0"
imageoptimize = "0.4.0"
mime = "0.3.17"
mime_guess = "2.0.5"
num_cpus = "1.17.0"
once_cell = "1.21.3"
rust-embed = "8.7.2"
serde = "1.0.228"
tibba-config = "0.1.0"
tibba-error = "0.1.0"
tibba-hook = "0.1.0"
tibba-middleware = "0.1.1"
tibba-opendal = "0.1.2"
tibba-performance = "0.1.0"
tibba-router-common = "0.1.2"
tibba-scheduler = "0.1.0"
tibba-state = "0.1.0"
tibba-util = "0.1.3"
time = "0.3.44"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = [
    "compression-br",
    "compression-gzip",
    "compression-zstd",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
validator = "0.20.0"


[profile.release]
lto = true
codegen-units = 1
